<resources>
    <string name="app_name">BTechMobi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BillerTech Mobi</string>
    <string name="nav_header_subtitle">-</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Login Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">BILLER TECH</string>
    <string name="splash_bottomtext">Copyrights @ EnflowsoftIndia Solutions 2022</string>
    <string name="username">"Username "</string>
    <string name="menu_transaction">Transactions</string>
    <string name="menu_sales">Sales</string>
    <string name="menu_dc">Delivery Challan</string>
    <string name="menu_statement_salesbill">Sales Bill</string>
    <string name="menu_statement_outstanding">Sales Outstanding</string>
    <string name="appversion">version 1.0</string>
    <string name="menu_home">Home</string>
    <string name="str_btnSaleslist">Sales</string>
    <string name="menu_statements">Statements</string>
    <string name="str_btnOutstandingstatement">Outstanding</string>
    <string name="str_btnDelivery">Delivery</string>
    <string name="str_btnNewsales">New Sales</string>
    <string name="str_btnNewDelivery">New DC</string>
</resources>