<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mnuhome"
            android:icon="@drawable/ic_baseline_home_green"
            android:title="@string/menu_home" />
           </group>

    <item android:id="@+id/mnuadmin"
        android:title="@string/menu_transaction">
        <menu>
            <item android:id="@+id/mnusales"
                android:title="@string/menu_sales"
                android:visible="true"
                android:icon="@drawable/ic_baseline_point_of_sale_green"/>
            <item android:id="@+id/mnudelivery"
                android:title="@string/menu_dc"
                android:visible="true"
                android:icon="@drawable/ic_baseline_delivery_black"/>
        </menu>
    </item>
    <item android:id="@+id/mnureports"
        android:title="@string/menu_transaction">
        <menu>
            <item android:id="@+id/mnusalesstatement"
                android:title="@string/menu_statement_salesbill"
                android:visible="true"
                android:icon="@drawable/ic_baseline_menu_book_24"/>
            <item android:id="@+id/mnuoutstandingstatement"
                android:title="@string/menu_statement_outstanding"
                android:visible="true"
                android:icon="@drawable/ic_baseline_menu_book_24"/>

        </menu>
    </item>
</menu>