<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dev.enflowsoft.btech.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/nav_saleslist"
        android:name="dev.enflowsoft.btech.ui.home.HomeFragment"
        android:label="@string/menu_sales"
        tools:layout="@layout/sales_list_fragment" />

    <fragment
        android:id="@+id/nav_deliverylist"
        android:name="dev.enflowsoft.btech.ui.home.HomeFragment"
        android:label="@string/menu_dc"
        tools:layout="@layout/delivery_list_fragment" />

    <fragment
        android:id="@+id/nav_outstandingstatement"
        android:name="dev.enflowsoft.btech.ui.home.HomeFragment"
        android:label="@string/menu_statement_outstanding"
        tools:layout="@layout/statement_outstanding_fragment" />


</navigation>