<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home_fragment_view"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="Transactions"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:weightSum="4"
            android:orientation="horizontal">


            <Button
                android:id="@+id/home_menu_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/button_bg_primary"
                android:textColor="@color/white"
                android:text="@string/str_btnSaleslist"
                android:layout_marginRight="10sp"/>


            <Button
                android:id="@+id/home_menu_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/button_bg_primary"
                android:textColor="@color/white"
                android:text="@string/str_btnDelivery"
                android:layout_marginRight="10sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/menu_statements"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_menu_salesoutstanding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_bg_primary"
                android:textColor="@color/white"
                android:text="@string/str_btnOutstandingstatement" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>